use tonic::{Request, Response, Status};
use tracing::info;

use hodei_audit_proto::{
    AnalyticsQueryRequest, AnalyticsQueryResponse, AuditQueryRequest, AuditQueryResponse,
    HealthCheckRequest, HealthCheckResponse, HealthStatus, Hrn as ProtoHrn, HrnHierarchy,
    HrnMetadata, QueryMetadata, QueryStats, ResolveHrnRequest, ResolveHrnResponse,
    SearchHrnRequest, SearchHrnResponse, audit_query_service_server::AuditQueryService,
};

use hodei_audit_types::hrn::Hrn;

/// Implementación del servicio de query de auditoría
/// Maneja consultas, analytics y resolución de HRNs
#[derive(Debug, Clone, Default)]
pub struct AuditQueryServiceImpl {
    // Contador de queries para métricas
    query_counter: std::sync::Arc<std::sync::atomic::AtomicU64>,
}

impl AuditQueryServiceImpl {
    /// Crear nueva instancia del servicio
    pub fn new() -> Self {
        info!("Initializing AuditQueryService");
        Self {
            query_counter: std::sync::Arc::new(std::sync::atomic::AtomicU64::new(0)),
        }
    }

    /// Incrementar contador de queries
    fn next_query_id(&self) -> String {
        let count = self
            .query_counter
            .fetch_add(1, std::sync::atomic::Ordering::SeqCst);
        format!("qry_{}", count + 1)
    }
}

#[tonic::async_trait]
impl AuditQueryService for AuditQueryServiceImpl {
    /// Consultar eventos de auditoría
    async fn query_events(
        &self,
        request: Request<AuditQueryRequest>,
    ) -> Result<Response<AuditQueryResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();

        info!(tenant_id = tenant_id, "Received QueryEvents request");

        // Validación básica
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        // TODO: Implementar lógica de query real
        // - Validar filtros
        // - Ejecutar query en storage
        // - Aplicar paginación
        // - Retornar resultados

        // Por ahora, retornar respuesta vacía
        let query_id = self.next_query_id();
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());
        let tenant_id_for_log = tenant_id.clone();

        let metadata = QueryMetadata {
            query_id: query_id.clone(),
            executed_at: Some(now),
            execution_time_ms: 1, // Simulado
            results_count: 0,
            applied_filters: {
                let mut filters = std::collections::HashMap::new();
                filters.insert("tenant_id".to_string(), tenant_id);
                filters
            },
        };

        let stats = QueryStats {
            bytes_processed: 0,
            events_scanned: 0,
            events_returned: 0,
            selectivity: 0.0,
            storage_tier: "hot".to_string(),
        };

        info!(
            tenant_id = tenant_id_for_log,
            query_id = query_id,
            "Query executed successfully"
        );

        let response = AuditQueryResponse {
            events: vec![], // TODO: Retornar eventos reales
            metadata: Some(metadata),
            next_cursor: "".to_string(),
            has_more: false,
            total_count: 0,
            stats: Some(stats),
        };

        Ok(Response::new(response))
    }

    /// Resolver HRN a metadata
    async fn resolve_hrn(
        &self,
        request: Request<ResolveHrnRequest>,
    ) -> Result<Response<ResolveHrnResponse>, Status> {
        let req = request.into_inner();
        let hrn = req.hrn.clone();

        if hrn.is_none() {
            return Err(Status::invalid_argument("hrn is required"));
        }

        let hrn = hrn.unwrap();
        let hrn_str = format!(
            "hrn:{}:{}:{}:{}:{}",
            hrn.partition, hrn.service, hrn.tenant_id, hrn.region, hrn.resource_type
        );

        info!(hrn = hrn_str, "Received ResolveHrn request");

        // TODO: Implementar resolución real de HRN
        // - Validar formato HRN
        // - Consultar metadata en storage
        // - Resolver jerarquía si se solicita
        // - Retornar metadata

        // Por ahora, retornar respuesta simulada
        let hrn_for_hierarchy = hrn.clone();
        let hrn_for_response = hrn.clone();
        let metadata = hodei_audit_proto::HrnMetadata {
            display_name: format!("Resource: {}", hrn.resource_type),
            description: "Hodei resource".to_string(),
            tags: {
                let mut tags = std::collections::HashMap::new();
                tags.insert("service".to_string(), hrn.service);
                tags.insert("region".to_string(), hrn.region);
                tags
            },
            owner: "".to_string(),
            created_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            updated_at: Some(prost_types::Timestamp::from(std::time::SystemTime::now())),
            custom_attributes: std::collections::HashMap::new(),
        };

        let hierarchy = if req.include_hierarchy {
            Some(hodei_audit_proto::HrnHierarchy {
                parent: Some(hrn_for_hierarchy), // TODO: Resolver padre real
                children: vec![],                // TODO: Resolver hijos reales
                depth: 1,
                path: hrn.resource_path.clone(),
            })
        } else {
            None
        };

        info!(hrn = hrn_str, "HRN resolved successfully");

        let response = ResolveHrnResponse {
            hrn: Some(hrn_for_response),
            metadata: Some(metadata),
            hierarchy,
        };

        Ok(Response::new(response))
    }

    /// Buscar HRNs
    async fn search_hrn(
        &self,
        request: Request<SearchHrnRequest>,
    ) -> Result<Response<SearchHrnResponse>, Status> {
        let req = request.into_inner();
        let query = req.query.clone();
        let tenant_id = req.tenant_id.clone();

        info!(
            tenant_id = tenant_id,
            query = query,
            "Received SearchHrn request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        if query.is_empty() {
            return Err(Status::invalid_argument("query is required"));
        }

        // TODO: Implementar búsqueda real
        // - Parsear query
        // - Ejecutar búsqueda en storage
        // - Aplicar filtros
        // - Paginación

        // Por ahora, retornar resultado vacío
        info!(
            tenant_id = tenant_id,
            query = query,
            "Search completed successfully"
        );

        let response = SearchHrnResponse {
            results: vec![], // TODO: Retornar resultados reales
            total_count: 0,
            next_cursor: "".to_string(),
        };

        Ok(Response::new(response))
    }

    /// Ejecutar analytics query
    async fn run_analytics(
        &self,
        request: Request<AnalyticsQueryRequest>,
    ) -> Result<Response<AnalyticsQueryResponse>, Status> {
        let req = request.into_inner();
        let tenant_id = req.tenant_id.clone();
        let metric = req.metric.clone();

        info!(
            tenant_id = tenant_id,
            metric = metric,
            "Received RunAnalytics request"
        );

        // Validación
        if tenant_id.is_empty() {
            return Err(Status::invalid_argument("tenant_id is required"));
        }

        if metric.is_empty() {
            return Err(Status::invalid_argument("metric is required"));
        }

        // TODO: Implementar analytics real
        // - Validar métrica y agregación
        // - Ejecutar query agregada
        // - Retornar resultados

        // Por ahora, retornar resultado vacío
        let query_id = self.next_query_id();
        let now = prost_types::Timestamp::from(std::time::SystemTime::now());
        let tenant_id_for_log = tenant_id.clone();
        let metric_for_log = metric.clone();

        let metadata = QueryMetadata {
            query_id,
            executed_at: Some(now),
            execution_time_ms: 1,
            results_count: 0,
            applied_filters: {
                let mut filters = std::collections::HashMap::new();
                filters.insert("tenant_id".to_string(), tenant_id);
                filters.insert("metric".to_string(), metric);
                filters
            },
        };

        info!(
            tenant_id = tenant_id_for_log,
            metric = metric_for_log,
            "Analytics query executed successfully"
        );

        let response = AnalyticsQueryResponse {
            results: vec![], // TODO: Retornar resultados reales
            metadata: Some(metadata),
        };

        Ok(Response::new(response))
    }
}
